     [sshconnect2.c]
     uint32_t -> u_int32_t (which we use everywhere else)
     (Id sync only - portable already had this)
   - markus@cvs.openbsd.org 2006/05/16 09:00:00
     [clientloop.c]
     missing free; from Kylene Hall
   - markus@cvs.openbsd.org 2006/05/17 12:43:34
     [scp.c sftp.c ssh-agent.c ssh-keygen.c sshconnect.c]
     fix leak; coverity via Kylene Jo Hall

20060521
 - (dtucker) [auth.c monitor.c] Now that we don't log from both the monitor
   and slave, we can remove the special-case handling in the audit hook in
   auth_log.

20060517
 - (dtucker) [ssh-rand-helper.c] Check return code of mkdir and fix file
   pointer leak.  From kjhall at us.ibm.com, found by coverity.

20060515
 - (dtucker) [openbsd-compat/getrrsetbyname.c] Use _compat_res instead of
   _res, prevents problems on some platforms that have _res as a global but
   don't have getrrsetbyname(), eg IRIX 5.3.  Found and tested by
   georg.schwarz at freenet.de, ok djm@.
 - (dtucker) [defines.h] Find a value for IOV_MAX or use a conservative
   default.  Patch originally from tim@, ok djm
 - (dtucker) [auth-pam.c] Bug #1188: pass result of do_pam_account back and
   do not allow kbdint again after the PAM account check fails.  ok djm@

20060506
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2006/04/25 08:02:27
     [authfile.c authfile.h sshconnect2.c ssh.c sshconnect1.c]
     Prevent ssh from trying to open private keys with bad permissions more than
     once or prompting for their passphrases (which it subsequently ignores
     anyway), similar to a previous change in ssh-add.  bz #1186, ok djm@
   - djm@cvs.openbsd.org 2006/05/04 14:55:23
     [dh.c]
     tighter DH exponent checks here too; feedback and ok markus@
   - djm@cvs.openbsd.org 2006/04/01 05:37:46
     [OVERVIEW]
     $OpenBSD$ in here too
   - dtucker@cvs.openbsd.org 2006/05/06 08:35:40
     [auth-krb5.c]
     Add $OpenBSD$ in comment here too

20060504