@@ -10,6 +10,9 @@
    - markus@cvs.openbsd.org 2006/05/17 12:43:34
      [scp.c sftp.c ssh-agent.c ssh-keygen.c sshconnect.c]
      fix leak; coverity via Kylene Jo Hall
+   - miod@cvs.openbsd.org 2006/05/18 21:27:25
+     [kexdhc.c kexgexc.c]
+     paramter -> parameter
 
 20060521
  - (dtucker) [auth.c monitor.c] Now that we don't log from both the monitor
